fix z-index

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -4,6 +4,7 @@
     border-radius: 48px;
     height: 412px;
     padding: 32px;
+    z-index: 100;
     box-sizing: border-box;
     @media (max-width: 1526px) {
         height: 360px;
